<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WazaifActivity">


    <ImageView
        android:visibility="visible"
        android:id="@+id/ivEditbutton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_image" />

    <EditText
        android:id="@+id/etWazaif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#80A3CA"
        android:hint="@string/tex_enter_wazaif_here"
        android:padding="8dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textColorHint="#151414"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recyclerview"
        android:layout_marginTop="14dp"
        android:text="@string/tex_back" />

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#B9CAE6"
        android:text="@string/tex_save_wazaif"
        android:textSize="18sp"
        android:layout_below="@+id/etWazaif"
        android:layout_centerHorizontal="true"
         />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="368dp"
        android:layout_height="424dp"
        android:layout_below="@+id/btSave"
        android:layout_marginTop="55dp" />


</RelativeLayout>