<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <ImageView
        android:id="@+id/ivDashboardBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/wazaifbackground_634"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvCounterResult"
        android:layout_width="108dp"
        android:layout_height="93dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/tex_0"
        android:textAlignment="center"
        android:textColor="#d6e0f5"
        android:textSize="60sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvCounterButton"
        android:layout_width="match_parent"
        android:layout_height="414dp"
        android:layout_marginBottom="132dp"
        android:gravity="center"
        android:textColor="#CCDFDA"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <ImageView
        android:id="@+id/ivReset"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:src="@drawable/icons8_reset_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945" />

    <ImageView
        android:id="@+id/ivDecreaseButton"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:src="@drawable/icons8_minus_96"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvCounterButton"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toEndOf="@+id/ivReset"
        app:layout_constraintTop_toTopOf="@+id/tvCounterButton"
        app:layout_constraintVertical_bias="0.924" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="353dp"
        android:layout_height="367dp"
        android:background="@drawable/circle_shape"
        android:indeterminate="false"
        android:max="100"
        android:progress="65"
        android:progressDrawable="@drawable/circular_progress_bar"
        app:layout_constraintBottom_toBottomOf="@+id/ivDashboardBg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivDashboardBg"
        app:layout_constraintTop_toTopOf="@+id/ivDashboardBg"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvLaps"
        android:layout_width="87dp"
        android:layout_height="35dp"
        android:background="@color/black_transparent"
        android:text="@string/tex_lap"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCounterButton"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvLimit"
        android:layout_width="86dp"
        android:layout_height="35dp"
        android:layout_marginEnd="28dp"
        android:background="@color/black_transparent"
        android:text="LIMIT:"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ivDashboardBg"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCounterButton"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etLimit"
        android:layout_width="78dp"
        android:layout_height="44dp"
        android:layout_marginBottom="112dp"
        android:autofillHints="00"
        android:inputType="numberSigned"
        android:text="@string/tex_100"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvLimit"
        app:layout_constraintTop_toBottomOf="@+id/tvCounterButton"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/tvWazifa"
        android:layout_width="340dp"
        android:layout_height="90dp"
        android:text="لآ اِلَهَ اِلّا اللّهُ مُحَمَّدٌ رَسُوُل اللّهِ"
        android:textAlignment="center"
        android:textColor="#C0DCE4"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvCounterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivDashboardBg"
        app:layout_constraintVertical_bias="0.288"
        tools:ignore="MissingConstraints" />


    <ImageView
        android:id="@+id/ivEditbutton"
        android:layout_width="55dp"
        android:layout_height="43dp"
        android:src="@drawable/icons8_edit_3"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivDecreaseButton"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toEndOf="@+id/ivReset"
        app:layout_constraintTop_toBottomOf="@+id/tvCounterButton"
        app:layout_constraintVertical_bias="0.606"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ivVolumebutton"
        android:layout_width="55dp"
        android:layout_height="43dp"
        android:src="@drawable/icon_volume_0011"
        app:layout_constraintBottom_toTopOf="@+id/tvCounterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWazifa"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ivAlarmButton"
        android:layout_width="73dp"
        android:layout_height="58dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/icons8_bell"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toEndOf="@+id/ivVolumebutton"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>